2003-09-01  Sebastien Pouliot  <spouliot@videotron.ca>

	* Mono.Security.dll.sources: Added support for Authenticode(tm)
	signatures.

2003-07-30  Sebastien Pouliot  <spouliot@videotron.ca>

	* Mono.Security.dll.sources: Added ExtendedKeyUsageExtension.cs 
	certificate extension (so MakeCert can now create SSL certificates).

2003-07-28  Sebastien Pouliot  <spouliot@videotron.ca>

	* Mono.Security.dll.sources: Added missing SubjectAltNameExtension.cs

2003-06-14  Sebastien Pouliot  <spouliot@videotron.ca>

	* list.unix. Added SubjectAltNameExtension.cs

2003-03-06  Sebastien Pouliot  <spouliot@videotron.ca>

	* list.unix: New. All C# files required to build the assembly.
	* makefile.gnu: New. Makefile to build the assembly under Linux.
	* Mono.Security.build: New. NAnt build file. 
