@@ -1,3 +1,7 @@
+2003-09-05  Sebastien Pouliot  <spouliot@videotron.ca>
+
+	* KeyAttributesExtension.cs: New. Added for WSE.
+
 2003-09-01  Sebastien Pouliot  <spouliot@videotron.ca>
 
 	* Mono.Security.dll.sources: Added support for Authenticode(tm)
